--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "plataforma de perguntas e respostas usando nodejs com mysql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "author": "Vitor silva",
   "license": "ISC",
